--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "antd": "^5.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -34,6 +36,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
