feat: ✨ add ant redux

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-xs-admin",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
-    "antd": "^5.0.0",
+    "@reduxjs/toolkit": "^1.9.0",
+    "antd": "^5.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "sort-by": "^1.2.0"
   },
