--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "#/*": ["types/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "types"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
