--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@ant-design/icons": "^4.8.0",
     "@reduxjs/toolkit": "^1.9.0",
     "antd": "^5.0.1",
+    "dayjs": "^1.11.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "sort-by": "^1.2.0"
@@ -42,8 +44,9 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "typescript": "*",
-    "vite": "^3.2.3"
+    "typescript": "^4.9.0",
+    "vite": "^3.2.3",
+    "vite-plugin-svg-icons": "^2.0.1"
   },
   "config": {
     "commitizen": {
