--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,9 @@
     }
   },
   "include": ["src", "types"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
