fix: 🐛 lint-staged 查找不到文件

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     }
   },
   "lint-staged": {
-    "˜{src,mock,build}/**/*.{ts,js,tsx,jsx}": [
+    "{src,mock,build}/**/*.{ts,js,tsx,jsx}": [
       "eslint --fix",
       "prettier --write"
     ],
