--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@reduxjs/toolkit": "^1.9.0",
     "ahooks": "^3.7.2",
     "antd": "^5.0.1",
+    "axios": "^1.2.0",
     "dayjs": "^1.11.6",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "match-sorter": "^6.3.1",
+    "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.2.1",
@@ -31,12 +35,15 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
-    "@jsxiaosi/commitlint-config": "^0.0.8",
-    "@jsxiaosi/eslint-config-prettier": "^0.0.8",
-    "@jsxiaosi/eslint-config-ts": "^0.0.8",
+    "@jsxiaosi/commitlint-config": "^0.0.11",
+    "@jsxiaosi/eslint-config-prettier": "^0.0.11",
+    "@jsxiaosi/eslint-config-ts": "^0.0.11",
+    "@types/crypto-js": "^4.1.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "crypto-js": "^4.1.1",
     "czg": "^1.3.12",
     "eslint": "^8.0.1",
     "eslint-plugin-react": "^7.31.11",
@@ -46,8 +53,9 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "typescript": "^4.9.0",
+    "typescript": "^4.9.3",
     "vite": "^3.2.3",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "config": {
