--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons": "^4.8.0",
+    "@emotion/react": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.0",
     "ahooks": "^3.7.2",
     "antd": "^5.0.1",
     "axios": "^1.2.0",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.6",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -35,6 +37,7 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.5",
     "@jsxiaosi/commitlint-config": "^0.0.11",
     "@jsxiaosi/eslint-config-prettier": "^0.0.11",
     "@jsxiaosi/eslint-config-ts": "^0.0.11",
