--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "jsxImportSource": "@emotion/react",
     "baseUrl": ".",
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
