--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons": "^4.8.0",
     "@emotion/react": "^11.10.5",
