--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react-swc": "^3.0.1",
     "conventional-changelog-cli": "^2.2.2",
     "crypto-js": "^4.1.1",
     "czg": "^1.4.1",
