--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
-    "@ant-design/colors": "^6.0.0",
-    "@ant-design/icons": "^4.8.0",
+    "@ant-design/colors": "^7.0.0",
+    "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@reduxjs/toolkit": "^1.9.1",
-    "ahooks": "^3.7.3",
-    "antd": "^5.0.7",
-    "axios": "^1.2.1",
+    "@reduxjs/toolkit": "^1.9.2",
+    "ahooks": "^3.7.4",
+    "antd": "^5.1.7",
+    "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
@@ -35,35 +35,36 @@
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.2.5",
+    "react-intl": "^6.2.7",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.5.0",
+    "react-router-dom": "^6.8.0",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.5",
-    "@jsxiaosi/commitlint-config": "^0.0.13",
-    "@jsxiaosi/eslint-config-prettier": "^0.0.13",
-    "@jsxiaosi/eslint-config-react": "^0.0.13",
+    "@jsxiaosi/commitlint-config": "^0.0.14",
+    "@jsxiaosi/eslint-config-prettier": "^0.0.14",
+    "@jsxiaosi/eslint-config-react": "^0.0.14",
     "@types/crypto-js": "^4.1.1",
     "@types/lodash-es": "^4.17.6",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "@vitejs/plugin-react-swc": "^3.0.1",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react-swc": "^3.1.0",
     "conventional-changelog-cli": "^2.2.2",
     "crypto-js": "^4.1.1",
     "czg": "^1.4.1",
-    "eslint": "^8.30.0",
-    "husky": "^8.0.2",
+    "eslint": "^8.33.0",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
     "lint-staged": "^13.1.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "pretty-quick": "^3.1.3",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.2",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.1",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-pwa": "^0.14.1",
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "pnpm": {
