--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "pretty-quick": "^3.1.3",
     "typescript": "^5.0.4",
     "vite": "^4.3.1",
-    "vite-plugin-mock": "^3.0.0",
+    "vite-plugin-mock": "2.9.1",
     "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-svg-icons": "^2.0.1"
   },
