--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/colors": "^7.0.0",
-    "@ant-design/icons": "^5.0.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "ahooks": "^3.7.6",
-    "antd": "^5.4.4",
-    "axios": "^1.3.6",
+    "ahooks": "^3.7.8",
+    "antd": "^5.9.0",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.9",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -35,36 +35,38 @@
     "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.4.1",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
+    "react-intl": "^6.4.5",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.6",
-    "@jsxiaosi/commitlint-config": "^0.0.14",
-    "@jsxiaosi/eslint-config-prettier": "^0.0.14",
-    "@jsxiaosi/eslint-config-react": "^0.0.14",
-    "@types/crypto-js": "^4.1.1",
-    "@types/lodash-es": "^4.17.7",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.0",
-    "conventional-changelog-cli": "^2.2.2",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@jsxiaosi/commitlint-config": "^0.0.17",
+    "@jsxiaosi/eslint-config-prettier": "^0.0.17",
+    "@jsxiaosi/eslint-config-react": "^0.0.17",
+    "@types/crypto-js": "^4.1.2",
+    "@types/lodash-es": "^4.17.9",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "conventional-changelog-cli": "^4.1.0",
     "crypto-js": "^4.1.1",
-    "czg": "^1.6.1",
-    "eslint": "^8.39.0",
+    "czg": "^1.7.1",
+    "eslint": "^8.49.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "less": "^4.1.3",
-    "lint-staged": "^13.2.1",
+    "less": "^4.2.0",
+    "lint-staged": "^14.0.1",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.1",
-    "vite-plugin-mock": "2.9.1",
-    "vite-plugin-pwa": "^0.14.7",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vite-plugin-mock": "2.9.6",
+    "vite-plugin-pwa": "^0.16.5",
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "pnpm": {
