--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
-    "@jsxiaosi/commitlint-config": "^0.0.17",
-    "@jsxiaosi/eslint-config-prettier": "^0.0.17",
-    "@jsxiaosi/eslint-config-react": "^0.0.17",
+    "@jsxiaosi/commitlint-config": "^0.0.18",
+    "@jsxiaosi/eslint-config-prettier": "^0.0.18",
+    "@jsxiaosi/eslint-config-react": "^0.0.18",
     "@types/crypto-js": "^4.1.2",
     "@types/lodash-es": "^4.17.9",
     "@types/react": "^18.2.21",
@@ -65,6 +65,7 @@
     "pretty-quick": "^3.1.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
+    "vite-plugin-fake-server": "^2.0.0",
     "vite-plugin-mock": "2.9.6",
     "vite-plugin-pwa": "^0.16.5",
     "vite-plugin-svg-icons": "^2.0.1"
