--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "staging": "tsc && vite build --mode staging",
     "preview": "vite preview",
     "lint:eslint": "eslint . --fix",
     "lint:prettier": "prettier --write .",
