--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview",
     "lint:eslint": "eslint . --fix",
     "lint:prettier": "prettier --write .",
+    "lint:pretty": "pretty-quick --staged",
     "lint:staged": "lint-staged",
     "log": "conventional-changelog -p cmyr-config -i CHANGELOG.md -s -r 0",
     "tsc": "tsc --noEmit --skipLibCheck",
@@ -63,6 +64,7 @@
     "less": "^4.2.0",
     "lint-staged": "^15.1.0",
     "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
     "typescript": "^5.3.0",
     "vite": "^5.0.4",
     "vite-plugin-fake-server": "^2.0.0",
