--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.16",
     "commitlint": "^18.4.3",
     "conventional-changelog-cli": "^4.1.0",
     "crypto-js": "^4.2.0",
@@ -63,8 +64,10 @@
     "husky": "^8.0.3",
     "less": "^4.2.0",
     "lint-staged": "^15.1.0",
+    "postcss": "^8.4.32",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.3.0",
     "vite": "^5.0.4",
     "vite-plugin-fake-server": "^2.0.0",
