--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
   "i18n-ally.displayLanguage": "zh-CN",
   "i18n-ally.enabledFrameworks": ["react"],
   "i18n-ally.sourceLanguage": "zh-CN",
-  "i18n-ally.keystyle": "nested"
+  "i18n-ally.keystyle": "flat"
 }
