--- a/package.json
+++ b/package.json
@@ -19,25 +19,26 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.3",
-    "@ant-design/colors": "^7.0.0",
-    "@ant-design/icons": "^5.2.6",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@reduxjs/toolkit": "^2.0.1",
-    "ahooks": "^3.7.8",
-    "antd": "^5.12.2",
-    "axios": "^1.6.2",
-    "classnames": "^2.3.2",
-    "dayjs": "^1.11.10",
+    "@ant-design/colors": "^7.0.2",
+    "@ant-design/icons": "^5.3.7",
+    "@commitlint/cli": "^19.3.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@reduxjs/toolkit": "^2.2.5",
+    "ahooks": "^3.8.0",
+    "antd": "^5.18.0",
+    "axios": "^1.7.2",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-intl": "^6.5.5",
-    "react-redux": "^9.0.4",
-    "react-router-dom": "^6.20.1",
+    "match-sorter": "^6.3.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-intl": "^6.6.8",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
@@ -46,30 +47,30 @@
     "@jsxiaosi/commitlint-config": "^0.0.21",
     "@jsxiaosi/eslint-config-prettier": "^0.0.21",
     "@jsxiaosi/eslint-config-react": "^0.0.21",
-    "@types/crypto-js": "^4.2.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.16",
-    "commitlint": "^18.4.3",
-    "conventional-changelog-cli": "^4.1.0",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
+    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.19",
+    "commitlint": "^19.3.0",
+    "conventional-changelog-cli": "^5.0.0",
     "crypto-js": "^4.2.0",
-    "czg": "^1.8.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
+    "czg": "^1.9.2",
+    "eslint": "^9.4.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^9.0.11",
     "less": "^4.2.0",
-    "lint-staged": "^15.2.0",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.8",
-    "vite-plugin-fake-server": "^2.0.0",
-    "vite-plugin-pwa": "^0.17.4",
+    "lint-staged": "^15.2.5",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.1",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.13",
+    "vite-plugin-fake-server": "^2.1.1",
+    "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "pnpm": {
@@ -79,6 +80,10 @@
         "@babel/core"
       ]
     }
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   },
   "config": {
     "commitizen": {
