--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.12.0",
     "@eslint-react/eslint-plugin": "^1.14.3",
-    "@jsxiaosi/commitlint-config": "^0.1.0",
+    "@jsxiaosi/commitlint-config": "^1.0.2",
+    "@jsxiaosi/eslint-config": "^1.0.2",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
@@ -56,10 +57,10 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.19",
-    "commitlint": "^19.3.0",
+    "commitlint": "^19.5.0",
     "conventional-changelog-cli": "^5.0.0",
     "crypto-js": "^4.2.0",
-    "czg": "^1.9.4",
+    "czg": "^1.10.1",
     "eslint": "^9.10.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
