--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "crypto-js": "^4.2.0",
     "czg": "^1.10.1",
     "eslint": "^9.10.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "husky": "^9.1.1",
