--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "staging": "tsc && vite build --mode staging",
     "preview": "vite preview",
     "lint:eslint": "eslint \"{src,mock,build}/**/*.{ts,js,tsx,jsx}\" package.json --fix",
+    "lint:prettier": "prettier --write .",
     "lint:staged": "lint-staged",
     "log": "conventional-changelog -p cmyr-config -i CHANGELOG.md -s -r 0",
     "tsc": "tsc --noEmit --skipLibCheck",
@@ -48,8 +49,9 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.12.0",
     "@eslint-react/eslint-plugin": "^1.14.3",
-    "@jsxiaosi/commitlint-config": "^1.0.2",
-    "@jsxiaosi/eslint-config": "^1.0.2",
+    "@jsxiaosi/commitlint-config": "^1.0.5",
+    "@jsxiaosi/eslint-config": "^1.0.5",
+    "@jsxiaosi/eslint-config-prettier": "^1.0.5",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
@@ -92,7 +94,18 @@
   },
   "lint-staged": {
     "{src,mock,build}/**/*.{ts,js,tsx,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
       "eslint --fix"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "eslint --fix",
+      "prettier --write"
     ]
   }
 }
