--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "staging": "tsc && vite build --mode staging",
     "preview": "vite preview",
     "lint:eslint": "eslint \"{src,mock,build}/**/*.{ts,js,tsx,jsx}\" package.json --fix",
-    "lint:prettier": "prettier . --write",
+    "lint:prettier": "prettier --write .",
     "lint:staged": "lint-staged",
     "log": "conventional-changelog -p cmyr-config -i CHANGELOG.md -s -r 0",
     "tsc": "tsc --noEmit --skipLibCheck",
@@ -25,58 +25,58 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.3",
     "@ant-design/colors": "^7.1.0",
-    "@ant-design/icons": "^5.5.1",
-    "@emotion/react": "^11.13.3",
+    "@ant-design/icons": "^5.3.7",
+    "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@reduxjs/toolkit": "^2.3.0",
-    "ahooks": "^3.8.1",
-    "antd": "^5.21.5",
-    "axios": "^1.7.7",
+    "@reduxjs/toolkit": "^2.2.6",
+    "ahooks": "^3.8.0",
+    "antd": "^5.19.3",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.12",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "match-sorter": "^7.0.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intl": "^6.8.1",
+    "react-intl": "^6.6.8",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.25.1",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.12.0",
-    "@eslint-react/eslint-plugin": "^1.15.0",
+    "@eslint-react/eslint-plugin": "^1.14.3",
     "@jsxiaosi/commitlint-config": "^1.0.5",
     "@jsxiaosi/eslint-config": "^1.0.5",
     "@jsxiaosi/eslint-config-prettier": "^1.0.5",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "@vitejs/plugin-react-swc": "^3.7.1",
-    "autoprefixer": "^10.4.20",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.19",
     "commitlint": "^19.5.0",
     "conventional-changelog-cli": "^5.0.0",
     "crypto-js": "^4.2.0",
     "czg": "^1.10.1",
-    "eslint": "^9.13.0",
+    "eslint": "^9.10.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.13",
-    "husky": "^9.1.6",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "husky": "^9.1.1",
     "less": "^4.2.0",
-    "lint-staged": "^15.2.10",
-    "postcss": "^8.4.47",
+    "lint-staged": "^15.2.7",
+    "postcss": "^8.4.39",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.10",
-    "vite-plugin-fake-server": "^2.1.2",
-    "vite-plugin-pwa": "^0.20.5",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.4",
+    "vite-plugin-fake-server": "^2.1.1",
+    "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "pnpm": {
