--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lint:eslint": "eslint \"{src,mock,build}/**/*.{ts,js,tsx,jsx}\" package.json --fix",
     "lint:prettier": "prettier . --write",
     "lint:staged": "lint-staged",
+    "check:type": "tsc --noEmit",
+    "lint:eslint-insppect-config": "npx @eslint/config-inspector --config eslint.config.js",
     "log": "conventional-changelog -p cmyr-config -i CHANGELOG.md -s -r 0",
     "tsc": "tsc --noEmit --skipLibCheck",
     "cz": "czg",
@@ -25,58 +27,60 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.3",
     "@ant-design/colors": "^7.1.0",
-    "@ant-design/icons": "^5.5.1",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@reduxjs/toolkit": "^2.3.0",
-    "ahooks": "^3.8.1",
-    "antd": "^5.21.5",
-    "axios": "^1.7.7",
+    "@ant-design/icons": "^5.5.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@reduxjs/toolkit": "^2.5.0",
+    "ahooks": "^3.8.4",
+    "antd": "^5.22.5",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "match-sorter": "^7.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-intl": "^6.8.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
+    "match-sorter": "^8.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-intl": "^7.0.4",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.1.0",
+    "react-router-dom": "^7.1.0",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.12.0",
-    "@eslint-react/eslint-plugin": "^1.15.0",
-    "@jsxiaosi/commitlint-config": "^1.0.5",
-    "@jsxiaosi/eslint-config": "^1.0.5",
-    "@jsxiaosi/eslint-config-prettier": "^1.0.5",
+    "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/eslint-plugin": "^11.12.0",
+    "@eslint-react/eslint-plugin": "^1.22.0",
+    "@jsxiaosi/commitlint-config": "^1.0.7",
+    "@jsxiaosi/eslint-config": "^1.0.7",
+    "@jsxiaosi/eslint-config-prettier": "^1.0.7",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "@vitejs/plugin-react-swc": "^3.7.1",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
-    "commitlint": "^19.5.0",
+    "commitlint": "^19.6.1",
     "conventional-changelog-cli": "^5.0.0",
     "crypto-js": "^4.2.0",
-    "czg": "^1.10.1",
-    "eslint": "^9.13.0",
+    "czg": "^1.11.0",
+    "eslint": "^9.17.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.13",
-    "husky": "^9.1.6",
-    "less": "^4.2.0",
-    "lint-staged": "^15.2.10",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.10",
-    "vite-plugin-fake-server": "^2.1.2",
-    "vite-plugin-pwa": "^0.20.5",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "husky": "^9.1.7",
+    "less": "^4.2.1",
+    "lint-staged": "^15.2.11",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.5",
+    "vite-plugin-fake-server": "^2.1.4",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "pnpm": {
