--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/eslint-plugin": "^11.12.0",
     "@eslint-react/eslint-plugin": "^1.22.0",
-    "@jsxiaosi/commitlint-config": "^1.0.7",
-    "@jsxiaosi/eslint-config": "^1.0.7",
-    "@jsxiaosi/eslint-config-prettier": "^1.0.7",
+    "@jsxiaosi/commitlint-config": "^1.0.9",
+    "@jsxiaosi/eslint-config": "^1.0.9",
+    "@jsxiaosi/eslint-config-prettier": "^1.0.9",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.0.2",
@@ -69,6 +69,7 @@
     "czg": "^1.11.0",
     "eslint": "^9.17.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "husky": "^9.1.7",
