ci(dockerfile): 🛠 修改部署权限

--- a/package.json
+++ b/package.json
@@ -26,63 +26,68 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.3",
-    "@ant-design/colors": "^7.1.0",
-    "@ant-design/icons": "^5.5.2",
+    "@ant-design/colors": "^7.2.1",
+    "@ant-design/icons": "^6.0.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@reduxjs/toolkit": "^2.5.0",
-    "ahooks": "^3.8.4",
-    "antd": "^5.22.5",
-    "axios": "^1.7.9",
+    "@emotion/styled": "^11.14.1",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "ahooks": "^3.9.0",
+    "antd": "^5.26.5",
+    "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
-    "keepalive-for-react": "^3.0.7",
+    "keepalive-for-react": "^4.0.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "match-sorter": "^8.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-intl": "^7.0.4",
+    "match-sorter": "^8.0.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-intl": "^7.1.11",
     "react-redux": "^9.2.0",
-    "react-router": "^7.1.0",
-    "react-router-dom": "^7.1.0",
+    "react-router": "^7.7.0",
+    "react-router-dom": "^7.7.0",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.13.5",
     "@emotion/eslint-plugin": "^11.12.0",
-    "@eslint-react/eslint-plugin": "^1.22.0",
-    "@jsxiaosi/commitlint-config": "^1.0.9",
-    "@jsxiaosi/eslint-config": "^1.0.9",
-    "@jsxiaosi/eslint-config-prettier": "^1.0.9",
+    "@eslint-react/eslint-plugin": "^1.52.3",
+    "@jsxiaosi/commitlint-config": "^1.0.11",
+    "@jsxiaosi/eslint-config": "^1.0.11",
+    "@jsxiaosi/eslint-config-prettier": "^1.0.11",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitejs/plugin-react-swc": "^3.7.2",
-    "autoprefixer": "^10.4.20",
-    "commitlint": "^19.6.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react-swc": "^3.10.2",
+    "autoprefixer": "^10.4.21",
+    "commitlint": "^19.8.1",
     "conventional-changelog-cli": "^5.0.0",
     "crypto-js": "^4.2.0",
-    "czg": "^1.11.0",
-    "eslint": "^9.17.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
+    "czg": "^1.12.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
-    "less": "^4.2.1",
-    "lint-staged": "^15.2.11",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.5",
-    "vite-plugin-fake-server": "^2.1.4",
-    "vite-plugin-pwa": "^0.21.1",
+    "install": "^0.13.0",
+    "less": "^4.4.0",
+    "lint-staged": "^16.1.2",
+    "npm": "^11.4.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.8.3",
+    "vite": "^7.0.5",
+    "vite-plugin-fake-server": "^2.2.0",
+    "vite-plugin-pwa": "^1.0.1",
     "vite-plugin-svg-icons": "^2.0.1"
   },
   "pnpm": {
